# glitch-world-model

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  AGENTS.md  CLAUDE.md  Makefile  PACKAGE_FIX_REPORT.md  PLAYBOOK.md  README.md  RULES.md  dvc.yaml  nonexistent  pyproject.toml
.github/: copilot-instructions.md
attached_assets/: Pasted--21--1781699687761_1781699687761.txt  Pasted--A-Confirm-current-state-HEAD-ed01009fa9cea3696df5178d2_1782048846663.txt  Pasted--A-Confirm-repo-and-previous-stages-EXPECTED-SHA-ed0100_1782048040076.txt  Pasted--MASTER-PROMPT-FOR-CLAUDE-FABLE-5-Full-WOB-R5-Failure-A_1782097289922.txt  Pasted--MASTER-PROMPT-FOR-CLAUDE-OPUS-CLAUDE-CODE-FIX-R5-WOB-L_1782117234473.txt  Pasted--R5-WOB-OVERNIGHT-START-time-utc-Sun-J-1782066482228_1782066482228.txt  Pasted--ROLE-You-are-a-senior-ML-research-engineer-reproducibi_1781699388272.txt  Pasted--ROLE-You-are-a-senior-ML-research-strategist-reproduci_1781715023991.txt  Pasted--bash-R5-WOB-OVER-1782065471945_1782065471945.txt  Pasted--bash-set-Eeuo-pipefail-REPO-DIR-kaggle-working-glitch-_1782038725063.txt  Pasted--bash-set-Eeuo-pipefail-REPO-DIR-kaggle-working-glitch-_1782048058249.txt  Pasted--bash-set-Eeuo-pipefail-REPO-DIR-kaggle-working-glitch-_1782048827362.txt  Pasted--bash-set-Eeuo-pipefail-export-PYTHONUNBUFFERED-1-REPO-_1782066085746.txt  Pasted--ho-t-ng-trong-7m-21s-LeWM-Glitch-R4-Verification-Roadm_1781707514362.txt  Pasted--status-preflight-complete-manifest-configs-wob-protoco_1782153219777.txt  Pasted-01-12-Log-d-ng-ngay-sau-2-Preflight-preflight-b-t-u-nh-_1782065739707.txt  (+9 more)
(+555 files in other folders)
