[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glitch-world-model"
version = "0.1.0"
description = "Baseline pipeline for video game glitch detection research."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
  "pre-commit>=3.5",
]
research = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "rich>=13.7",
  "PyYAML>=6",
]
video = [
  "opencv-python>=4.9",
  "decord>=0.6",
]
tracking = [
  "mlflow>=2.10",
]
config = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]
data = [
  "datasets>=2.18",
  "dvc>=3.50",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".test-tmp",
  ".venv",
  "build",
  "checkpoints",
  "data",
  "dist",
  "external",
  "outputs",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
line-ending = "auto"
